<resources>
    <string name="app_name">Smart City LG dashboard</string>
    <string name="menu_settings">Connection manager</string>
    <string name="about">Credits</string>
    <string name="voice">Voice</string>
    <string name="master_username">Master username</string>
    <string name="ip_address">Master IP address</string>
    <string name="port">Port</string>
    <string name="button_text">Connect to LG</string>
    <string name="credit">Credit goes here</string>
    <string name="help">Help</string>
    <string name="lg_tasks">LG Tasks</string>
    <string name="master_password">Master password</string>
    <string name="total_machines">Total machine count</string>
    <string name="status">Status:</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="homepage_action_bar_title">Smart City for LG</string>
</resources>